# Django-Celery-Mastery

./: README.md  command.md  docker-compose.yml  pyproject.toml
dcelery/: Dockerfile
dcelery/dcelery/: celery.py  settings.py
